--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     </head>
 
     <body>
+    <div class = container>
         <header><h1>Welcome to Jeremy's Page</h1></header>
         <br>
         <nav>
-            <a href="http://jcaipic.com/" target="_blank">My Photo Works</a>
-            <a href="https://vimeo.com/jeremycai" target="_blank">My Video Works</a>
+            <a id= "navLink" href="http://jcaipic.com/" target="_blank">My Photo Works</a>
+            <a id= "navLink" href="https://vimeo.com/jeremycai" target="_blank">My Video Works</a>
         </nav>
         <br>
         <div class="content">
@@ -21,20 +22,24 @@
                     <article>
                         <h3>Fun Facts about Myself</h3>
                         <h4>My Hobbies</h4>
-                        <p>place holder</p>
+                        <p>place holder place holderplace holderplace holderplace holderplace holderplace holderplace holderplace holderplace holderplace holder</p>
                         <h4>My Backgrounds</h4>
-                        <p>place holder</p>
+                        <p>place holder place holderplace holderplace holderplace holderplace holderplace holderplace holderplace holderplace holderplace holderplace holder</p>
                     </article>
                 </section>
             </div>
             <div class="right">
                 <aside>
                     <h2>More about my greatest hobby!</h2>
+                    <p>place holderplace holderplace holderplace holderplace holderplace holderplace holderplace holderplace holderplace holderplace holder</p>
                 </aside>
             </div>
+            <!-- <div class="clearfix"></div> -->
         </div>
+        <div class="clearfix"></div>
         <footer>follow me on Instgram: 
-            <a href="https://www.instagram.com/jeremycai_photography/"><img src="https://cdn2.iconfinder.com/data/icons/instagram-new/512/instagram-logo-color-512.png" alt="icon" height="32"/></a>
+            <a id="footLink" href="https://www.instagram.com/jeremycai_photography/"><img src="https://cdn2.iconfinder.com/data/icons/instagram-new/512/instagram-logo-color-512.png" alt="icon" height="32"/></a>
         </footer>
+    </div>
     </body>
 </html>
